# kernstat

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/kernstat/: __init__.py  cli.py  cpu.py  disk.py  mem.py  net.py
tests/: conftest.py  test_cpu.py  test_disk.py  test_mem.py  test_net.py
