[project]
name = "kernstat"
version = "0.1.0"
description = "Linux kernel statistics CLI tool"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Wai Hlyan Min Thein", email = "waihlyanminthein@gmail.com" }
]
keywords = ["linux", "kernel", "system", "monitoring", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.0",
]

[project.scripts]
kernstat = "kernstat.cli:main"

[project.urls]
Repository = "https://github.com/waihlyanminthein/kernstat"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
